Tutorial part 5. End of series.

--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,21 @@ body{
   }
 
 }
+
+.grey-background{
+	background-color: #222;
+	color: white;
+}
+
+#heart{
+	color: #EB1342;
+}
+
+#footer{
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+#footer a{
+	color: white;
+}
